--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "passport-google-oauth": "^0.2.0",
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.3",
+    "require-dir": "^0.3.0",
     "songbird": "^1.0.1"
   }
 }
