--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.3",
     "require-dir": "^0.3.0",
-    "songbird": "^1.0.1"
+    "songbird": "^1.0.1",
+    "twitter": "^1.2.5"
   }
 }
